--- a/docs/src/css/custom.css
+++ b/docs/src/css/custom.css
@@ -15,6 +15,10 @@
   --ifm-color-primary-lightest: #3cad6e;
   --ifm-code-font-size: 95%;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
+  --padding-xs: 4px;
+  --padding-sm: 8px;
+  --padding-md: 16px;
+  --padding-lg: 24px;
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
@@ -40,5 +44,10 @@
 }
 
 .flex-item {
+  box-sizing: border-box;
   flex: 1;
+}
+
+.padding-md {
+  padding: var(--padding-md);
 }
