--- a/docs/src/css/custom.css
+++ b/docs/src/css/custom.css
@@ -6,6 +6,13 @@
 
 /* You can override the default Infima variables here. */
 :root {
+  --card-border-radius: 4px;
+  --card-shadow1: rgba(50, 50, 93, 0.01);
+  --card-shadow2: rgba(50, 50, 93, 0.1);
+  --card-shadow3: rgba(0, 0, 0, 0.02);
+  --card-hover-shadow: 0 0 0 1px var(--card-shadow1),
+    0 7px 14px 0 var(--card-shadow2), 0 3px 6px 0 var(--card-shadow3);
+
   --ifm-color-primary: #2e8555;
   --ifm-color-primary-dark: #29784c;
   --ifm-color-primary-darker: #277148;
@@ -13,12 +20,40 @@
   --ifm-color-primary-light: #33925d;
   --ifm-color-primary-lighter: #359962;
   --ifm-color-primary-lightest: #3cad6e;
+
+  /* Temporary secondary styles */
+  --ifm-color-secondary: #85552e;
+  --ifm-color-secondary-dark: #784c29;
+  --ifm-color-secondary-darker: #714827;
+  --ifm-color-secondary-darkest: #5d3b20;
+  --ifm-color-secondary-light: #925d33;
+  --ifm-color-secondary-lighter: #996235;
+  --ifm-color-secondary-lightest: #ad6e3c;
+
+  /* Temporary danger styles */
+  --ifm-color-danger: #852e5e;
+  --ifm-color-danger-dark: #782955;
+  --ifm-color-danger-darker: #712750;
+  --ifm-color-danger-darkest: #5d2042;
+  --ifm-color-danger-light: #923368;
+  --ifm-color-danger-lighter: #99356c;
+  --ifm-color-danger-lightest: #ad3c7b;
+
   --ifm-code-font-size: 95%;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
   --padding-xs: 4px;
   --padding-sm: 8px;
   --padding-md: 16px;
   --padding-lg: 24px;
+
+  /* Temporary info styles */
+  --ifm-color-info: #2e8581;
+  --ifm-color-info-dark: #297873;
+  --ifm-color-info-darker: #27716d;
+  --ifm-color-info-darkest: #205d5a;
+  --ifm-color-info-light: #33928c;
+  --ifm-color-info-lighter: #359994;
+  --ifm-color-info-lightest: #3cada7;
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
@@ -30,7 +65,41 @@
   --ifm-color-primary-light: #29d5b0;
   --ifm-color-primary-lighter: #32d8b4;
   --ifm-color-primary-lightest: #4fddbf;
+
+  /* Inverted shadows */
+  --card-shadow1: rgba(205, 205, 162, 0.99);
+  --card-shadow2: rgba(205, 205, 162, 0.9);
+  --card-shadow3: rgba(255, 255, 255, 0.98);
+
+  /* Temporary secondary styles */
+  --ifm-color-secondary: #c2a025;
+  --ifm-color-secondary-dark: #af9021;
+  --ifm-color-secondary-darker: #a5881f;
+  --ifm-color-secondary-darkest: #88701a;
+  --ifm-color-secondary-light: #d5b029;
+  --ifm-color-secondary-lighter: #d8b432;
+  --ifm-color-secondary-lightest: #ddbf4f;
+
+  /* Temporary danger styles */
+  --ifm-color-danger: #c22547;
+  --ifm-color-danger-dark: #af2140;
+  --ifm-color-danger-darker: #a51f3c;
+  --ifm-color-danger-darkest: #881a32;
+  --ifm-color-danger-light: #d5294e;
+  --ifm-color-danger-lighter: #d83256;
+  --ifm-color-danger-lightest: #dd4f6d;
+
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
+
+  /* Temporary info styles */
+  --ifm-color-info: #2595c2;
+  --ifm-color-info-dark: #2187af;
+  --ifm-color-info-dark: #2187af;
+  --ifm-color-info-darker: #1f7fa5;
+  --ifm-color-info-darkest: #1a6988;
+  --ifm-color-info-light: #29a4d5;
+  --ifm-color-info-lighter: #32a9d8;
+  --ifm-color-info-lightest: #4fb4dd;
 }
 
 .flex-column {
