[ML-47137] Migrate tracing/ docs (#13707)
Signed-off-by: Eduardo Sanz <eduardo.sanz@databricks.com>

--- a/docs/src/css/custom.css
+++ b/docs/src/css/custom.css
@@ -120,3 +120,29 @@
 .padding-md {
   padding: var(--padding-md);
 }
+
+/* Most of our images are PNGs with transparent
+backgrounds so they look bad in dark mode */
+main img {
+  background-color: white;
+}
+
+.center-div {
+  margin-inline: auto;
+}
+
+/* We need to this class to limit image size using max-height. The class
+must be applied to the wrapping div along with the desired max-height */
+.max-height-img-container {
+  display: flex;
+
+  p {
+    display: flex;
+    justify-content: center;
+  }
+
+  img {
+    max-height: 100%;
+    width: auto;
+  }
+}
